ENH: Add ifrs17a library

--- a/lifelib/libraries/ifrs17a/template_example.ipynb
+++ b/lifelib/libraries/ifrs17a/template_example.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9d9b1c57",
+   "metadata": {},
+   "source": [
+    "# Running the Tempate and Outputting Tables\n",
+    "\n",
+    "This notebook runs `template.py` and output results in tables. The result tables replicate figures shown in tutorial videos on Systemortph's YouTube channel.\n",
+    "    \n",
+    "To run this notebook, the `ifrs17` and `template` modules in your copy of the `ifrs17a` library need to be importable. To ensure they are importable, make sure the current directory is set to your `ifrs17a` copy. Typically, the current directory is set to the location where you started this notebook, so it should run fine unless you have moved the notebook elsewhere.\n",
+    "To check the current directory from Python, import `os`, and execute `os.getcwd()`. To change the current directory in Python, use the `os.chdir` function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56244df4",
+   "metadata": {},
+   "source": [
+    "## Running `template.py`\n",
+    "\n",
+    "`template.py` is executed when it's imported by the import statement. `ifrsvars` defined in the template module refers to a DataFrame that contains all the IFRS variables as rows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9c438538",
@@ -8,7 +31,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from template import *"
+    "from template import ifrsvars"
    ]
   },
   {
@@ -399,6 +422,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec3aa267",
+   "metadata": {},
+   "source": [
+    "In this notebook, we only use data for the reporting period ending at the end of March 2021. The code below extract rows for the March-2021 reporting period, and create a new DataFrame containing the rows and assigns it to `df`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c8ca5792",
@@ -406,6 +437,27 @@
    "outputs": [],
    "source": [
     "df = ifrsvars.loc[(ifrsvars['Year'] == 2021) & (ifrsvars['Month'] == 3)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fdfd111",
+   "metadata": {},
+   "source": [
+    "All the tables from here are created by filtering `df` based on specific EstimateTypes and then organizing them into a tabular format using properties, such as Novelty, AocType, EconomicBasis, and LiabilityType."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53a59eea",
+   "metadata": {},
+   "source": [
+    "## Best Estimate\n",
+    "\n",
+    "The code below creates a DataFrame that shows breakdowns of the best estimate liability.\n",
+    "\n",
+    "\n",
+    "The DataFrame below replicates figures in the table shown around  [the 2:15 mark in the video, Systemorph #Techucation for IFRS17: How to read the full set of financial reports – Part 1](https://youtu.be/Qfh73qsxgNY?t=135)"
    ]
   },
   {
@@ -578,9 +630,20 @@
     }
    ],
    "source": [
-    "df_BE = df.loc[df['EstimateType'] == 'BE'][['AocType', 'Novelty', 'AmountType', 'EconomicBasis', 'Value', 'LiabilityType']]\n",
-    "PVs = df_BE.set_index(['Novelty', 'AocType', 'EconomicBasis', 'LiabilityType'])['Value'].groupby(level=list(range(4))).sum().unstack(level=[-1, -2])\n",
-    "PVs.fillna(0)"
+    "df_BE = df.loc[df['EstimateType'] == 'BE'][['AocType', 'Novelty', 'AmountType', 'LiabilityType', 'EconomicBasis', 'Value']]\n",
+    "BE = df_BE.set_index(['Novelty', 'AocType', 'EconomicBasis', 'LiabilityType'])['Value'].groupby(\n",
+    "    level=list(range(4))).sum().unstack(level=[-1, -2]).fillna(0)\n",
+    "BE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449fff43",
+   "metadata": {},
+   "source": [
+    "## Risk Adjustment\n",
+    "\n",
+    "The code below creates a DataFrame that shows breakdows of risk margin."
    ]
   },
   {
@@ -748,8 +811,19 @@
    ],
    "source": [
     "df_RA = df.loc[df['EstimateType'] == 'RA'][['AocType', 'Novelty', 'AmountType', 'EconomicBasis', 'Value', 'LiabilityType']]\n",
-    "RA = df_RA.set_index(['Novelty', 'AocType', 'LiabilityType', 'EconomicBasis'])['Value'].groupby(level=list(range(4))).sum().unstack(level=[-1, -2])\n",
-    "RA.fillna(0)"
+    "RA = df_RA.set_index(['Novelty', 'AocType', 'LiabilityType', 'EconomicBasis'])['Value'].groupby(\n",
+    "    level=list(range(4))).sum().unstack(level=[-1, -2]).fillna(0)\n",
+    "RA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8f214e",
+   "metadata": {},
+   "source": [
+    "## Written Actuals\n",
+    "\n",
+    "The DataFrame below replicates figures in the table shown around [the 0:45 mark in the video, Systemorph #Techucation for IFRS17: How to read the full set of financial reports – Part 2](https://youtu.be/T9bArA3QWJU?t=45)."
    ]
   },
   {
@@ -778,13 +852,11 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>LiabilityType</th>\n",
        "      <th>LIC</th>\n",
        "      <th>LRC</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>AocType</th>\n",
        "      <th>AmountType</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -792,7 +864,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">CF</th>\n",
        "      <th>ACA</th>\n",
        "      <td>0.0</td>\n",
        "      <td>-70.0</td>\n",
@@ -822,13 +893,13 @@
        "</div>"
       ],
       "text/plain": [
-       "LiabilityType        LIC    LRC\n",
-       "AocType AmountType             \n",
-       "CF      ACA          0.0  -70.0\n",
-       "        AEA          0.0  -35.0\n",
-       "        ICO          0.0  -42.0\n",
-       "        NIC        -82.0 -350.0\n",
-       "        PR           0.0  450.0"
+       "LiabilityType   LIC    LRC\n",
+       "AmountType                \n",
+       "ACA             0.0  -70.0\n",
+       "AEA             0.0  -35.0\n",
+       "ICO             0.0  -42.0\n",
+       "NIC           -82.0 -350.0\n",
+       "PR              0.0  450.0"
       ]
      },
      "execution_count": 6,
@@ -837,9 +908,20 @@
     }
    ],
    "source": [
-    "df_WA = df.loc[df['EstimateType'] == 'A'][['AocType', 'Novelty', 'AmountType', 'Value', 'LiabilityType']]\n",
-    "WA = df_WA.set_index(['AocType', 'AmountType' , 'LiabilityType'])['Value'].groupby(level=list(range(3))).sum().unstack(level=[-1])\n",
-    "WA.fillna(0)"
+    "df_WA = df.loc[df['EstimateType'] == 'A'][['AmountType', 'Value', 'LiabilityType']]\n",
+    "WA = df_WA.set_index(['AmountType' , 'LiabilityType'])['Value'].groupby(\n",
+    "    level=list(range(2))).sum().unstack(level=[-1]).fillna(0)\n",
+    "WA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7727f217",
+   "metadata": {},
+   "source": [
+    "## Advance, Overdue Actuals\n",
+    "\n",
+    "The DataFrame below replicates figures in the table shown around [the 1:15 mark in the video, Systemorph #Techucation for IFRS17: How to read the full set of financial reports – Part 2](https://youtu.be/T9bArA3QWJU?t=75)"
    ]
   },
   {
@@ -926,6 +1008,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8251f646",
+   "metadata": {},
+   "source": [
+    "## Deferrable Actuals\n",
+    "\n",
+    "The DataFrame below replicates figures in the table shown around [the 1:30 in the video, Systemorph #Techucation for IFRS17: How to read the full set of financial reports – Part 2](https://youtu.be/T9bArA3QWJU?t=90)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "53c3709a",
@@ -954,34 +1046,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EstimateType</th>\n",
-       "      <th>DA</th>\n",
+       "      <th>Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AocType</th>\n",
-       "      <th>AmountType</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AM</th>\n",
-       "      <th></th>\n",
        "      <td>59.158616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BOP</th>\n",
-       "      <th></th>\n",
        "      <td>-36.095865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CF</th>\n",
-       "      <th></th>\n",
        "      <td>-105.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EOP</th>\n",
-       "      <th></th>\n",
        "      <td>-81.937249</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -989,12 +1075,12 @@
        "</div>"
       ],
       "text/plain": [
-       "EstimateType                DA\n",
-       "AocType AmountType            \n",
-       "AM                   59.158616\n",
-       "BOP                 -36.095865\n",
-       "CF                 -105.000000\n",
-       "EOP                 -81.937249"
+       "              Value\n",
+       "AocType            \n",
+       "AM        59.158616\n",
+       "BOP      -36.095865\n",
+       "CF      -105.000000\n",
+       "EOP      -81.937249"
       ]
      },
      "execution_count": 8,
@@ -1003,14 +1089,25 @@
     }
    ],
    "source": [
-    "df_DA = df.loc[df['EstimateType'] == 'DA'][['AocType', 'Novelty', 'AmountType', 'Value', 'EstimateType']]\n",
-    "DA = df_DA.set_index(['AocType', 'AmountType', 'EstimateType'])['Value'].groupby(level=list(range(3))).sum().unstack(level=[-1])\n",
+    "df_DA = df.loc[df['EstimateType'] == 'DA'][['AocType', 'Novelty', 'AmountType', 'Value']]\n",
+    "DA = df_DA.set_index(['AocType']).groupby(level=0).sum()\n",
     "DA"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddf9c42a",
+   "metadata": {},
+   "source": [
+    "## Contractual Service Margin / Loss Component / Loss Recovery Component\n",
+    "\n",
+    "\n",
+    "The DataFrame below replicates figures in the table shown around [the 1:25 in the video, Systemorph #Techucation for IFRS17: How to read the full set of financial reports – Part 3](https://youtu.be/z4xohUbiyfM?t=85)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d6fe6fc9",
    "metadata": {},
    "outputs": [
@@ -1138,15 +1235,16 @@
        "        IA         0.000336    0.097803   -0.032601"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_TM = df.loc[(df['EstimateType'] == 'LR') | (df['EstimateType'] == 'L') | (df['EstimateType'] == 'C')]\n",
-    "TM = df_TM[['AocType', 'Novelty', 'Value', 'EstimateType']].set_index(['Novelty', 'AocType', 'EstimateType'])['Value'].groupby(level=list(range(3))).sum().unstack(level=[-1])\n",
-    "TM.fillna(0)"
+    "df_TM = df.loc[(df['EstimateType'] == 'C') | (df['EstimateType'] == 'L') | (df['EstimateType'] == 'LR')]\n",
+    "TM = df_TM[['AocType', 'Novelty', 'Value', 'EstimateType']].set_index(['Novelty', 'AocType', 'EstimateType'])['Value'].groupby(\n",
+    "    level=list(range(3))).sum().unstack(level=[-1]).fillna(0)\n",
+    "TM"
    ]
   }
  ],
@@ -1166,7 +1264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
