DOC: Fix docs in notebooks

--- a/lifelib/libraries/savings/savings_example2.ipynb
+++ b/lifelib/libraries/savings/savings_example2.ipynb
@@ -101,7 +101,7 @@
     "* `has_lapse`: Whether to reflect lapse decrement\n",
     "* `is_lapse_dynamic`: Whether to make lapse assumption dynamic\n",
     "\n",
-    "The `sim_param_table` DataFrame table defines 5 Simulation IDs from 1 through 5. The first simulation, which is obtained by setting 1 to `sim_id`, reproduces the result from the `CashValue_ME_EX1` model. Each of the follwoing simulation turns on one change on top of the previous simulation. \n"
+    "The `sim_param_table` DataFrame table defines 5 Simulation IDs from 1 through 5. The first simulation, which is obtained by setting 1 to `sim_id`, replicates the result from the `CashValue_ME_EX1` model. Each of the follwoing simulation turns on one change on top of the previous simulation. \n"
    ]
   },
   {
