DOC: Add modelx badge

--- a/lifelib/projects/simplelife/simplelife-demo.ipynb
+++ b/lifelib/projects/simplelife/simplelife-demo.ipynb
@@ -1020,7 +1020,7 @@
     "\n",
     "*Run this sample now!* |binder simplelife_demo|\n",
     "\n",
-    ".. include:: /binderlinks.rst\n",
+    ".. include:: /banners.rst\n",
     "   :start-after: Begin binder simplelife_demo\n",
     "   :end-before: End binder simplelife_demo\n",
     "\n",
