ENH: Update CashValue_ME_EX4

--- a/lifelib/libraries/savings/savings_example4.ipynb
+++ b/lifelib/libraries/savings/savings_example4.ipynb
@@ -7,18 +7,30 @@
    "source": [
     "# 4. Profiling and Optimizing the Model\n",
     "\n",
-    "This example shows how to profile the `CashValue_ME_EX1` model and how to optimize it. The optimized model is named `CashValue_ME_EX4`, and included in the `savings` library. `CashValue_ME_EX4` is about 4 times faster than `CashValue_ME_EX1`, although the result may be different on different hardware environments.\n",
-    "The profiling and model optimization approach shown here is applicable to any models in lifelib that use modelx and heavily depends on pandas.\n",
+    "*Last Update: 19 August 2023*\n",
     "\n",
-    "The profiling takes the following steps:\n",
-    "* Measure the run time of `CashValue_ME_EX1` using the `timeit` standard library. \n",
-    "* Profile the model using the `start_stacktrace`, `get_stacktrace`, `stop_stacktrace` functions of modelx.\n",
-    "* Output the profiling result and see what cells are taking time.\n",
+    "This notebook demonstrates how to profile a modelx model and subsequently optimize it by using `CashValue_ME_EX1` as an example. The optimized model, named `CashValue_ME_EX4`, is included in the `savings` library. It is approximately 3 to 4 times faster than `CashValue_ME_EX1`, though performance may vary depending on the specific hardware environment.\n",
     "\n",
-    "In this example, time consuming cells are those that are using pandas heavily, so the optimization focuses on replacing pandas DataFrames and Series with numpy arrays and avoiding time-consuming pandas operations.\n",
-    "Keep in mind that replacing pandas objects with numpy arrays reduces readability of the data that the model holds. \n",
-    "Pandas objects can have more representative indexes compared to integer-intexed numpy arrays.\n",
-    "Pandas objects also allow more sphisticated and complex operations on tabular data, so whether to use numpy for speed or pandas for ease of use is a trade-off."
+    "This approach to profiling and optimization is not exclusive to this model; it can be applied to any models in lifelib that use modelx and heavily depend on pandas. The profiling process is carried out through the following steps:\n",
+    "\n",
+    "\n",
+    "1. **Measuring run time:** Use the `timeit` standard library to measure the run time of `CashValue_ME_EX1`.\n",
+    "   \n",
+    "2. **Profiling the Model:** Utilize the `start_stacktrace`, `get_stacktrace`, and `stop_stacktrace` functions of modelx to create a profile of the model.\n",
+    "   \n",
+    "3. **Analyzing Profiling Results:** Review the output to identify which cells are consuming the most time.\n",
+    "\n",
+    "In our example, we will find that the most time-consuming cells are those heavily relying on pandas operations. This will lead us to the following optimization strategy:\n",
+    "\n",
+    "- **Replace Pandas with Numpy:** We will concentrate on replacing pandas DataFrames and Series with numpy arrays to avoid certain time-consuming pandas operations.\n",
+    "\n",
+    "It's important to recognize that these optimizations will come with trade-offs:\n",
+    "\n",
+    "- **Readability:** Switching from pandas objects to numpy arrays may reduce the data's readability, as pandas objects often provide more descriptive indexes than integer-indexed numpy arrays.\n",
+    "\n",
+    "- **Functionality:** While pandas offers more complex operations on tabular data, the decision between using numpy for speed or pandas for ease of use will be a choice that needs careful consideration.\n",
+    "\n",
+    "Ultimately, these insights and optimization methods will guide us toward a model that balances performance with functionality, based on specific project needs."
    ]
   },
   {
@@ -58,9 +70,9 @@
    "id": "987ed9ef",
    "metadata": {},
    "source": [
-    "By default, in `CashValue_ME_EX1`, 1 model point on 10,000 scenarios are set, which would require the same calculation load as running 10,000 model points on 1 scenario.\n",
+    "In the default configuration of `CashValue_ME_EX1`, we have it set up for 1 model point across 10,000 scenarios. This means the computational demand is equivalent to running the calculations for 10,000 model points in just one scenario.\n",
     "\n",
-    "The product spec id (`spec_id`) of the default single model point is `A`, which does not have surrender charge. Later in this example, we want to observe how surrender charge rates are looked up based on product specs, so here we change the model point table so that it refers to a table of multiple model points of multiple product specs.\n"
+    "The default model point is identified by the product spec id (`spec_id`) `A`, which doesn't include any surrender charge. However, for the purpose of this example, we're interested in observing how surrender charge rates are determined based on different product specs. So, we'll be adjusting the model point table to refer to a more diverse set of model points with varying product specs."
    ]
   },
   {
@@ -416,7 +428,7 @@
     {
      "data": {
       "text/plain": [
-       "0.915054"
+       "0.8520793000061531"
       ]
      },
      "execution_count": 6,
@@ -445,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "44386401.300826035"
+       "44386401.300826795"
       ]
      },
      "execution_count": 7,
@@ -561,64 +573,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>surr_charge_rate(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.529899</td>\n",
-       "      <td>42.448094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.128997</td>\n",
-       "      <td>10.333420</td>\n",
+       "      <td>0.201171</td>\n",
+       "      <td>22.439521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>claim_pp(t, kind)</th>\n",
-       "      <td>242</td>\n",
-       "      <td>0.096036</td>\n",
-       "      <td>7.693036</td>\n",
+       "      <th>surr_charge_rate(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.192129</td>\n",
+       "      <td>21.430986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>expenses(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.063368</td>\n",
+       "      <td>7.068365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>inv_return_mth(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.040032</td>\n",
-       "      <td>3.206834</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>av_pp_at(t, timing)</th>\n",
-       "      <td>485</td>\n",
-       "      <td>0.036636</td>\n",
-       "      <td>2.934734</td>\n",
+       "      <td>0.062507</td>\n",
+       "      <td>6.972279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>claims(t, kind)</th>\n",
        "      <td>484</td>\n",
-       "      <td>0.035000</td>\n",
-       "      <td>2.803736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_new_biz(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.030402</td>\n",
-       "      <td>2.435416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_if_at(t, timing)</th>\n",
-       "      <td>364</td>\n",
-       "      <td>0.030123</td>\n",
-       "      <td>2.413071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inv_income(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.027999</td>\n",
-       "      <td>2.242901</td>\n",
+       "      <td>0.048879</td>\n",
+       "      <td>5.452229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pols_lapse(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.027977</td>\n",
-       "      <td>2.241144</td>\n",
+       "      <td>0.037138</td>\n",
+       "      <td>4.142514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pols_if_at(t, timing)</th>\n",
+       "      <td>364</td>\n",
+       "      <td>0.035609</td>\n",
+       "      <td>3.971938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inv_income(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>3.485714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inv_income_pp(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.031210</td>\n",
+       "      <td>3.481353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pv_claims(kind)</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.029631</td>\n",
+       "      <td>3.305219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -626,16 +638,16 @@
       ],
       "text/plain": [
        "                       calls  duration   dur_perc\n",
-       "surr_charge_rate(t)      121  0.529899  42.448094\n",
-       "premium_pp(t)            121  0.128997  10.333420\n",
-       "claim_pp(t, kind)        242  0.096036   7.693036\n",
-       "inv_return_mth(t)        121  0.040032   3.206834\n",
-       "av_pp_at(t, timing)      485  0.036636   2.934734\n",
-       "claims(t, kind)          484  0.035000   2.803736\n",
-       "pols_new_biz(t)          121  0.030402   2.435416\n",
-       "pols_if_at(t, timing)    364  0.030123   2.413071\n",
-       "inv_income(t)            121  0.027999   2.242901\n",
-       "pols_lapse(t)            121  0.027977   2.241144"
+       "premium_pp(t)            121  0.201171  22.439521\n",
+       "surr_charge_rate(t)      121  0.192129  21.430986\n",
+       "expenses(t)              121  0.063368   7.068365\n",
+       "inv_return_mth(t)        121  0.062507   6.972279\n",
+       "claims(t, kind)          484  0.048879   5.452229\n",
+       "pols_lapse(t)            121  0.037138   4.142514\n",
+       "pols_if_at(t, timing)    364  0.035609   3.971938\n",
+       "inv_income(t)            121  0.031250   3.485714\n",
+       "inv_income_pp(t)         121  0.031210   3.481353\n",
+       "pv_claims(kind)            4  0.029631   3.305219"
       ]
      },
      "execution_count": 9,
@@ -654,6 +666,8 @@
    "metadata": {},
    "source": [
     "The output tells that `surr_charge_rate(t)` is consuming time the most, which is more than 40% of the total run time. Its fomula looks like below.\n",
+    "\n",
+    "## Optimizing the model\n",
     "\n",
     "`surr_charge_rate(t)` represents the surrener charge rates to be applied at time `t`. The surrender charge rates are defined by rate ID (such as `type_1`) and duration, and stored in `surr_charge_table` as a DataFrame. "
    ]
@@ -850,8 +864,9 @@
    "id": "5b35e2ac",
    "metadata": {},
    "source": [
-    "Many pandas operations are involved in the formula. We can perform the same operations with much smaller cost by rewriting the formula and other relevant formulas to use numpy arrays instead of DataFrames or Series.\n",
-    "Based on this approach, `surr_charge_rate(t)` can be written as:\n",
+    "Many of the formulas in our model rely heavily on pandas operations. However, we've found that we can achieve the same results at a significantly lower computational cost by refactoring these formulas. The key is to use numpy arrays in place of pandas DataFrames or Series.\n",
+    "\n",
+    "For instance, the formula `surr_charge_rate(t)` can be reformulated as:\n",
     "\n",
     "```python\n",
     "def surr_charge_rate(t):\n",
@@ -860,24 +875,25 @@
     "        surr_charge_table_column() + ind_row * len(surr_charge_table.columns)]\n",
     "```\n",
     "\n",
-    "where `surr_charge_table_column()` is a newly introduced cells and is defined as follows:\n",
+    "Here, we introduce a new function, `surr_charge_table_column()`, which is defined as:\n",
     "\n",
     "```python\n",
     "def surr_charge_table_column():\n",
     "    return surr_charge_table.columns.searchsorted(\n",
     "        surr_charge_id(), side='right') - 1\n",
-    "\n",
     "```\n",
     "\n",
-    "The new `surr_charge_rate(t)` returns a numpy array for each `t`, instead of a Series. In the same way, we can make other cells return numpy arrays instead of Series or DataFrames. `CashValue_ME_EX4` included in the library is the model to which all the changes are applied to.\n",
+    "In this revised version, `surr_charge_rate(t)` outputs a numpy array for each `t` rather than a Series. Similarly, other parts of our model can be adjusted to yield numpy arrays instead of Series or DataFrames.\n",
     "\n",
-    "The linked page below shows the entire comparison of before and after the changes. \n",
+    "Furthermore, a contributor conducted [an in-depth analysis](https://github.com/actuarialopensource/benchmarks/blob/memory_optimizations/computation_graph/experiments.ipynb) of the present value logic within the model. He found a way to express it more succinctly, making it both clearer and faster compared to the original implementation. Even though the present value for each cash flow item is computed only once, leading to minimal gains in runtime improvement, this refactoring makes the model more efficient overall.\n",
     "\n",
-    "https://www.diffchecker.com/iseYbXUD/\n",
+    "All these refinements have been integrated into `CashValue_ME_EX4`, which is now part of our library. For a comprehensive comparison between the original and updated versions, you can view the link below:\n",
     "\n",
-    "You can see the expression for the returned object has `.values` at the end in many of the changed formulas. The `.values` property on a DataFrame or a Series is for returning the contained values as a numpy array instead of the DataFrame or the Series.\n",
+    "[View the full comparison here](https://www.diffchecker.com/Wx1MwguF/)\n",
     "\n",
-    "Now let's check the speed of the optimized model.\n"
+    "In many of the updated formulas, you might notice the `.values` expression at the end. This property, when invoked on a DataFrame or Series, returns the contained data as a numpy array, bypassing the DataFrame or Series container.\n",
+    "\n",
+    "With all that said, let's now evaluate the performance of our optimized model."
    ]
   },
   {
@@ -889,7 +905,7 @@
     {
      "data": {
       "text/plain": [
-       "0.23962179999999922"
+       "0.24249910000071395"
       ]
      },
      "execution_count": 12,
@@ -911,7 +927,7 @@
     {
      "data": {
       "text/plain": [
-       "44386401.300826035"
+       "44386401.30082682"
       ]
      },
      "execution_count": 13,
@@ -965,64 +981,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>pols_lapse(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.037503</td>\n",
-       "      <td>13.435736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>premium_pp(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.023004</td>\n",
-       "      <td>8.241311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>surr_charge_rate(t)</th>\n",
-       "      <td>121</td>\n",
-       "      <td>0.023000</td>\n",
-       "      <td>8.240116</td>\n",
+       "      <th>pv_claims(kind)</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.036243</td>\n",
+       "      <td>14.559991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>av_pp_at(t, timing)</th>\n",
        "      <td>485</td>\n",
-       "      <td>0.018002</td>\n",
-       "      <td>6.449362</td>\n",
+       "      <td>0.031251</td>\n",
+       "      <td>12.554811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>claims(t, kind)</th>\n",
-       "      <td>484</td>\n",
-       "      <td>0.014502</td>\n",
-       "      <td>5.195450</td>\n",
+       "      <th>premium_pp(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.018622</td>\n",
+       "      <td>7.481088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pols_if_at(t, timing)</th>\n",
        "      <td>364</td>\n",
-       "      <td>0.011003</td>\n",
-       "      <td>3.941879</td>\n",
+       "      <td>0.016623</td>\n",
+       "      <td>6.678058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>pv_claims(kind)</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.010003</td>\n",
-       "      <td>3.583729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lapse_rate(t)</th>\n",
+       "      <th>pols_lapse(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.009001</td>\n",
-       "      <td>3.224894</td>\n",
+       "      <td>0.015670</td>\n",
+       "      <td>6.295221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>expenses(t)</th>\n",
+       "      <th>net_amt_at_risk(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.008003</td>\n",
-       "      <td>2.867000</td>\n",
+       "      <td>0.015668</td>\n",
+       "      <td>6.294359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>inv_income(t)</th>\n",
+       "      <th>pols_new_biz(t)</th>\n",
        "      <td>121</td>\n",
-       "      <td>0.007999</td>\n",
-       "      <td>2.865804</td>\n",
+       "      <td>0.015643</td>\n",
+       "      <td>6.284206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>surr_charge_rate(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.015632</td>\n",
+       "      <td>6.279896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mort_rate_mth(t)</th>\n",
+       "      <td>121</td>\n",
+       "      <td>0.015621</td>\n",
+       "      <td>6.275681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inv_return_table()</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.014546</td>\n",
+       "      <td>5.843516</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1030,16 +1046,16 @@
       ],
       "text/plain": [
        "                       calls  duration   dur_perc\n",
-       "pols_lapse(t)            121  0.037503  13.435736\n",
-       "premium_pp(t)            121  0.023004   8.241311\n",
-       "surr_charge_rate(t)      121  0.023000   8.240116\n",
-       "av_pp_at(t, timing)      485  0.018002   6.449362\n",
-       "claims(t, kind)          484  0.014502   5.195450\n",
-       "pols_if_at(t, timing)    364  0.011003   3.941879\n",
-       "pv_claims(kind)            4  0.010003   3.583729\n",
-       "lapse_rate(t)            121  0.009001   3.224894\n",
-       "expenses(t)              121  0.008003   2.867000\n",
-       "inv_income(t)            121  0.007999   2.865804"
+       "pv_claims(kind)            4  0.036243  14.559991\n",
+       "av_pp_at(t, timing)      485  0.031251  12.554811\n",
+       "premium_pp(t)            121  0.018622   7.481088\n",
+       "pols_if_at(t, timing)    364  0.016623   6.678058\n",
+       "pols_lapse(t)            121  0.015670   6.295221\n",
+       "net_amt_at_risk(t)       121  0.015668   6.294359\n",
+       "pols_new_biz(t)          121  0.015643   6.284206\n",
+       "surr_charge_rate(t)      121  0.015632   6.279896\n",
+       "mort_rate_mth(t)         121  0.015621   6.275681\n",
+       "inv_return_table()         1  0.014546   5.843516"
       ]
      },
      "execution_count": 14,
@@ -1069,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
