--- a/lifelib/libraries/basiclife/create_premium_table.ipynb
+++ b/lifelib/libraries/basiclife/create_premium_table.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "    !git clone -b colab https://github.com/lifelib-dev/lifelib.git\n",
+    "    %cd lifelib\n",
     "    !git checkout tags/current\n",
     "    !pip install modelx\n",
     "    %cd lifelib/lifelib/libraries/basiclife"
