--- a/lifelib/libraries/basiclife/create_premium_table.ipynb
+++ b/lifelib/libraries/basiclife/create_premium_table.ipynb
@@ -32,27 +32,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e509f574",
+   "id": "ef2f6f0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; import os\n",
+    "import sys, os\n",
     "\n",
     "if 'google.colab' in sys.modules:\n",
-<<<<<<< Updated upstream
-    "    !git clone -b colab https://github.com/lifelib-dev/lifelib.git\n",
-    "    %cd lifelib\n",
-    "    !git checkout tags/current\n",
-    "    !pip install modelx\n",
-    "    %cd lifelib/lifelib/libraries/basiclife"
-=======
     "    if not os.path.exists('/content/lifelib'):\n",
     "        !git clone -b colab https://github.com/lifelib-dev/lifelib.git\n",
-    "        %cd /content/lifelib\n",
+    "        %cd lifelib\n",
     "        !git checkout tags/current\n",
     "        !pip install modelx\n",
     "    %cd /content/lifelib/lifelib/libraries/basiclife"
->>>>>>> Stashed changes
    ]
   },
   {
