--- a/lifelib/libraries/basiclife/create_premium_table.ipynb
+++ b/lifelib/libraries/basiclife/create_premium_table.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ef2f6f0a",
    "metadata": {},
    "outputs": [],
@@ -39,17 +39,17 @@
     "import sys, os\n",
     "\n",
     "if 'google.colab' in sys.modules:\n",
-    "    if not os.path.exists('/content/lifelib'):\n",
-    "        !git clone -b colab https://github.com/lifelib-dev/lifelib.git\n",
-    "        %cd lifelib\n",
-    "        !git checkout tags/current\n",
-    "        !pip install modelx\n",
-    "    %cd /content/lifelib/lifelib/libraries/basiclife"
+    "    lib = 'basiclife'; lib_dir = '/content/'+ lib\n",
+    "    if not os.path.exists(lib_dir):\n",
+    "        !pip install lifelib\n",
+    "        import lifelib; lifelib.create(lib, lib_dir)\n",
+    "        \n",
+    "    %cd $lib_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "71da5b1f",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cd4d5b2b",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "00d461d2",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "[120 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9d4cae36",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7af10c19",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "    return np.around((1 + loading_prem()) * net_premium_pp(), 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0eb44b4d",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a2ee55a0",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "       5.56913884e-04, 3.61751124e-04, 4.71489217e-04, 6.08563590e-04])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7bf4d583",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "Name: premium_rate, Length: 120, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
